# ZeroGrad

./: .gitignore  CMakeLists.txt  README.md
bindings/: bindings.cpp
devlog/: week00.md
include/zerograd/: scalar.h
src/: scalar.cpp
tests/: test_scalar.cpp
